# blueprint_object_detection

QATM/QATM_pytorch/: preprocess.py  qatm_fixed.py  qatm_pytorch.ipynb  qatm_pytorch.py  requirements.txt  thresh_template.csv
yoloe/: README.md  keypoint.py  landmarks.py  pyproject.toml
yoloe/evals/: config.json  evaluator.py
yoloe/yoloe/: __init__.py  detector.py  test.py
